Fixed tick labels overlapping in box plots for IE and Firefox

--- a/src/webtsainterface/static/css/style.css
+++ b/src/webtsainterface/static/css/style.css
@@ -488,8 +488,11 @@ table.dataTable tbody tr.selected {
     width: -moz-calc(100% - 307px);
     width: -webkit-calc(100% - 307px);
     width: calc(100% - 307px);
+    min-height: 650px;
     float:left;
     padding-top: 5px;
+    overflow: auto;
+
 }
 
 #graphContainer .label{
